catalog-spring-boot/xebialabs/package/service-catalog.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.openshift.io/dependencies: '[{"name":"catalog-mongodb","namespace":"","kind":"Service"}]'
  labels:
    app: catalog
    application: coolstore
    component: catalog
  name: catalog
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deploymentconfig: catalog
