catalog-spring-boot/xebialabs/package/route-catalog.yaml
apiVersion: v1
kind: Route
metadata:
  labels:
    application: coolstore
    component: catalog
  name: catalog
spec:
  to:
    kind: Service
    name: catalog
    weight: 100
